manager/integration/deploy/backupstores/azurite-backupstore.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: longhorn-test-azblob
  namespace: default
  labels:
    app: longhorn-test-azblob
spec:
  replicas: 1
  selector:
    matchLabels:
      app: longhorn-test-azblob
  template:
    metadata:
      labels:
        app: longhorn-test-azblob
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: In
                values:
                - "true"
                - ""
      tolerations:
      - key: "node-role.kubernetes.io/master"
        operator: "Exists"
        effect: "NoSchedule"
      - key: "node-role.kubernetes.io/master"
        operator: "Exists"
        effect: "NoExecute"
      - key: "node-role.kubernetes.io/control-plane"
        operator: "Exists"
        effect: "NoSchedule"
      - key: "node-role.kubernetes.io/control-plane"
        operator: "Exists"
        effect: "NoExecute"
      - key: "node-role.kubernetes.io/etcd"
        operator: "Exists"
        effect: "NoSchedule"
      - key: "node-role.kubernetes.io/etcd"
        operator: "Exists"
        effect: "NoExecute"
      containers:
      - name: azurite
        image: mcr.microsoft.com/azure-storage/azurite:3.33.0
        ports:
        - containerPort: 10000
---
apiVersion: v1
kind: Service
metadata:
  name: azblob-service
  namespace: default
spec:
  selector:
    app: longhorn-test-azblob
  ports:
    - port: 10000
      targetPort: 10000
      protocol: TCP
  sessionAffinity: ClientIP
---
apiVersion: v1
kind: Service
metadata:
  name: azblob-nodeport
  namespace: default
spec:
  selector:
    app: longhorn-test-azblob
  type: NodePort
  ports:
    - port: 10000
      targetPort: 10000
      nodePort: 31000
