manager/integration/deploy/backupstores/cifs-backupstore.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: longhorn-test-cifs
  namespace: default
  labels:
    app: longhorn-test-cifs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: longhorn-test-cifs
  template:
    metadata:
      labels:
        app: longhorn-test-cifs
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: In
                values:
                - "true"
                - ""
      tolerations:
      - key: "node-role.kubernetes.io/master"
        operator: "Exists"
        effect: "NoSchedule"
      - key: "node-role.kubernetes.io/master"
        operator: "Exists"
        effect: "NoExecute"
      - key: "node-role.kubernetes.io/control-plane"
        operator: "Exists"
        effect: "NoSchedule"
      - key: "node-role.kubernetes.io/control-plane"
        operator: "Exists"
        effect: "NoExecute"
      - key: "node-role.kubernetes.io/etcd"
        operator: "Exists"
        effect: "NoSchedule"
      - key: "node-role.kubernetes.io/etcd"
        operator: "Exists"
        effect: "NoExecute"
      volumes:
      - name: cifs-volume
        emptyDir: {}
      containers:
      - name: longhorn-test-cifs-container
        image: public.ecr.aws/a9m3h7d1/longhornio/samba:latest
        ports:
        - containerPort: 139
        - containerPort: 445
        imagePullPolicy: Always
        securityContext:
          privileged: true
          capabilities:
            add: ["SYS_ADMIN", "DAC_READ_SEARCH"]
        volumeMounts:
        - name: cifs-volume
          mountPath: "/opt/backupstore"
        args: ["-u", "$(CIFS_USERNAME);$(CIFS_PASSWORD)", "-s", "backupstore;$(EXPORT_PATH);yes;no;no;all;none"]
---
kind: Service
apiVersion: v1
metadata:
  name: longhorn-test-cifs-svc
  namespace: default
spec:
  selector:
    app: longhorn-test-cifs
  clusterIP: None
  ports:
  - name: netbios-port
    port: 139
    targetPort: 139
  - name: microsoft-port
    port: 445
    targetPort: 445
