manager/integration/deploy/backupstores/minio-backupstore.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: longhorn-test-minio
  namespace: default
  labels:
    app: longhorn-test-minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: longhorn-test-minio
  template:
    metadata:
      labels:
        app: longhorn-test-minio
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: Exists
      tolerations:
      - key: "node-role.kubernetes.io/control-plane"
        operator: "Exists"
        effect: "NoSchedule"
      - key: "node-role.kubernetes.io/control-plane"
        operator: "Exists"
        effect: "NoExecute"
      - key: "node-role.kubernetes.io/etcd"
        operator: "Exists"
        effect: "NoSchedule"
      - key: "node-role.kubernetes.io/etcd"
        operator: "Exists"
        effect: "NoExecute"
      volumes:
      - name: minio-volume
        emptyDir: {}
      - name: minio-certificates
        secret:
          secretName: minio-secret
          items:
          - key: AWS_CERT
            path: public.crt
          - key: AWS_CERT_KEY
            path: private.key
      containers:
      - name: minio
        image: quay.io/minio/minio:RELEASE.2022-02-01T18-00-14Z
        command: ["sh", "-c", "mkdir -p /storage/backupbucket && mkdir -p /storage/.minio/certs && ln -sf /tmp/certs/private.key /storage/.minio/certs/private.key && ln -sf /tmp/certs/public.crt /storage/.minio/certs/public.crt && exec minio server /storage --certs-dir /storage/.minio/certs"]
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: minio-volume
          mountPath: "/storage"
        - name: minio-certificates
          mountPath: "/tmp/certs"
          readOnly: true
      - name: minio-helper
        image: public.ecr.aws/docker/library/busybox:1.34.1
        args: ["/bin/sh", "-c", "while true;do date;sleep 5; done"]
        volumeMounts:
        - name: minio-volume
          mountPath: "/storage"
---
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: default
spec:
  selector:
    app: longhorn-test-minio
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
  sessionAffinity: ClientIP
